--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Oxygen8</title>
+    <title>DXC DEMO</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
